tests/e2e/function_return_mutation_without_type.error
Error: syntax error in story at line 3

3|      return my_int decrement
        ^^^^^^^^^^^^^^^^^^^^^^^

E0110: `return` expected. Did you miss to add `returns int`?
